Newrelic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issugen-ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: issugens-relic.isd-dev.opsmx.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: pure-gitops-rolloutjk
            port:
              number: 8088
